@@ -24,8 +24,8 @@
 #ifndef _RECOMBINATOR_H
 #define _RECOMBINATOR_H
 /**
- \file
- \brief head file of class recombinator:public baseOperator
+   \file
+   \brief head file of class recombinator:public baseOperator
  */
 #include "operator.h"
 
@@ -34,25 +34,24 @@ using std::ostream;
 using std::ostream_iterator;
 
 namespace simuPOP {
-/// recombination and conversion
 /**
    In simuPOP, only one recombinator is provided. Recombination events between loci
    a/b and b/c are independent, otherwise there will be some linkage between loci. Users
    need to specify physical recombination rate between adjacent loci. In addition,
    for the recombinator
- \li it only works for diploid (and for females in haplodiploid) populations.
- \li the recombination rate must be comprised between \c 0.0 and \c 0.5. A recombination
+   \li it only works for diploid (and for females in haplodiploid) populations.
+   \li the recombination rate must be comprised between \c 0.0 and \c 0.5. A recombination
    rate of \c 0.0 means that the loci are completely linked, and thus behave together
    as a single linked locus. A recombination rate of \c 0.5 is equivalent to free of
    recombination. All other values between \c 0.0 and \c 0.5 will represent various
    linkage intensities	between adjacent pairs of loci. The recombination rate is
    equivalent to <tt>1-linkage</tt> and represents the probability that the allele
    at the next locus is randomly drawn.
- \li it works for selfing. I.e., when only one parent is provided, it will be
+   \li it works for selfing. I.e., when only one parent is provided, it will be
    recombined twice, producing both maternal and paternal chromosomes of the
    offspring.
- \li conversion is allowed. Note that conversion will nullify many recombination
-   	events, depending on the parameters chosen.
+   \li conversion is allowed. Note that conversion will nullify many recombination
+    events, depending on the parameters chosen.
  */
 
 class recombinator : public baseOperator
@@ -65,73 +64,73 @@ public:
 
 	/// recombine chromosomes from parents
 	/**
-	 \param intensity intensity of recombination. The actual recombination rate
-	   	between two loci is determined by <tt>intensity*locus distance (between them)</tt>.
-	 \param rate recombination rate regardless of locus distance after all \c afterLoci.
-	   	It can also be an array of recombination rates. Should have the same length
-	   	as \c afterLoci or \c totNumOfLoci().
-	   	The recombination rates are independent of locus distance.
-	 \param afterLoci an array of locus indexes. Recombination will occur after these
-	   	loci. If \c rate is also specified, they should have the same length. Default
-	   	to all loci (but meaningless for those loci located at the end of a chromosome).
-	   	If this parameter is given, it should be ordered, and can not include loci at
+	   \param intensity intensity of recombination. The actual recombination rate
+	    between two loci is determined by <tt>intensity*locus distance (between them)</tt>.
+	   \param rate recombination rate regardless of locus distance after all \c afterLoci.
+	    It can also be an array of recombination rates. Should have the same length
+	    as \c afterLoci or \c totNumOfLoci().
+	    The recombination rates are independent of locus distance.
+	   \param afterLoci an array of locus indexes. Recombination will occur after these
+	    loci. If \c rate is also specified, they should have the same length. Default
+	    to all loci (but meaningless for those loci located at the end of a chromosome).
+	    If this parameter is given, it should be ordered, and can not include loci at
 	   the end of a chromosome.
-	 \param maleIntensity recombination intensity for male individuals. If given,
+	   \param maleIntensity recombination intensity for male individuals. If given,
 	   parameter \c intensity will be considered as female intensity.
-	 \param maleRate recombination rate for male individuals. If given,
+	   \param maleRate recombination rate for male individuals. If given,
 	   parameter \c rate will be considered as female recombination rate.
-	 \param maleAfterLoci if given, males will recombine at different locations.
-	 \param convProb The probability of conversion event among all recombination
-	   	events. When a recombination event happens, it may become a recombination event
-	   	if the Holliday junction is resolved/repaired successfully, or a
-	   	conversion event if the junction is not resolved/repaired. The
-	   	default \c convProb is 0, meaning no conversion event at all.
-	   	Note that the ratio of conversion to recombination events varies greatly from
-	   	study to study, ranging from 0.1 to 15 (Chen et al, Nature Review Genetics, 2007).
-	   	This translate to 0.1/0.9~0.1 to 15/16~0.94 of this parameter. When
-	 \c convProb is 1, all recombination events will be conversion events.
-	 \param convMode conversion mode, determines how track length is determined.
-	 \li CONVERT_NumMarkers Converts a fixed number of markers.
-	 \li CONVERT_GeometricDistribution An geometric distribution is used to
-	   		determine how many markers will be converted.
-	 \li CONVERT_TractLength Converts a fixed length of tract.
-	 \li CONVERT_ExponentialDistribution An exponential distribution with parameter
-	 \c convLen will be used to determine track length.
-	 \param convParam Parameter for the conversion process. The exact meaning of this
-	   	parameter is determined by \c convMode. Note that
-	 \li conversion tract length is usually short, and is estimated to be
-	   		between 337 and 456 bp, with overall range between maybe 50 - 2500 bp.
-	 \li simuPOP does not impose a unit for marker distance so your choice
-	   		of \c convParam needs to be consistent with your unit. In the HapMap dataset,
-	   		cM is usually assumed and marker distances are around 10kb (0.001cM ~- 1kb).
-	   		Gene conversion can largely be ignored. This is important when
-	   		you use distance based conversion mode such as \c CONVERT_TrackLength or
-	 \c CONVERT_ExponentialDistribution.
-	 \li After a track length is determined, if a second recombination
-	   		event happens within this region, the track length will be shortened.
-	   		Note that conversion is identical to double recombination under
-	   		this context.
-	 \param haplodiploid If set to true, the first copy of paternal chromosomes
-	   		is copied directly as the paternal chromosomes of the offspring. This
-	   		is because haplodiploid male has only one set of chromosome.
+	   \param maleAfterLoci if given, males will recombine at different locations.
+	   \param convProb The probability of conversion event among all recombination
+	    events. When a recombination event happens, it may become a recombination event
+	    if the Holliday junction is resolved/repaired successfully, or a
+	    conversion event if the junction is not resolved/repaired. The
+	    default \c convProb is 0, meaning no conversion event at all.
+	    Note that the ratio of conversion to recombination events varies greatly from
+	    study to study, ranging from 0.1 to 15 (Chen et al, Nature Review Genetics, 2007).
+	    This translate to 0.1/0.9~0.1 to 15/16~0.94 of this parameter. When
+	   \c convProb is 1, all recombination events will be conversion events.
+	   \param convMode conversion mode, determines how track length is determined.
+	   \li CONVERT_NumMarkers Converts a fixed number of markers.
+	   \li CONVERT_GeometricDistribution An geometric distribution is used to
+	        determine how many markers will be converted.
+	   \li CONVERT_TractLength Converts a fixed length of tract.
+	   \li CONVERT_ExponentialDistribution An exponential distribution with parameter
+	   \c convLen will be used to determine track length.
+	   \param convParam Parameter for the conversion process. The exact meaning of this
+	    parameter is determined by \c convMode. Note that
+	   \li conversion tract length is usually short, and is estimated to be
+	        between 337 and 456 bp, with overall range between maybe 50 - 2500 bp.
+	   \li simuPOP does not impose a unit for marker distance so your choice
+	        of \c convParam needs to be consistent with your unit. In the HapMap dataset,
+	        cM is usually assumed and marker distances are around 10kb (0.001cM ~- 1kb).
+	        Gene conversion can largely be ignored. This is important when
+	        you use distance based conversion mode such as \c CONVERT_TrackLength or
+	   \c CONVERT_ExponentialDistribution.
+	   \li After a track length is determined, if a second recombination
+	        event happens within this region, the track length will be shortened.
+	        Note that conversion is identical to double recombination under
+	        this context.
+	   \param haplodiploid If set to true, the first copy of paternal chromosomes
+	        is copied directly as the paternal chromosomes of the offspring. This
+	        is because haplodiploid male has only one set of chromosome.
 
-	 \note There is no recombination between sex chromosomes of male individuals
+	   \note There is no recombination between sex chromosomes of male individuals
 	   if <tt>sexChrom()=True</tt>. This may change later if the exchanges
 	   of genes between pseudoautosomal regions of \c XY need to be modeled.
 
-	 \test src_recombinator.log Operator \c recombinator
+	   \test src_recombinator.log Operator \c recombinator
 	 */
 	recombinator(double intensity = -1,
-	             vectorf rate = vectorf(),
-	             vectoru afterLoci = vectoru(),
-	             double maleIntensity = -1,
-	             vectorf maleRate = vectorf(),
-	             vectoru maleAfterLoci = vectoru(),
-	             double convProb = 0, // no conversion
-	             UINT convMode = CONVERT_NumMarkers,
-	             double convParam = 1.,
-	             int begin = 0, int end = -1, int step = 1, vectorl at = vectorl(),
-	             int rep = REP_ALL, const vectorstr & infoFields = vectorstr())
+		vectorf rate = vectorf(),
+		vectoru afterLoci = vectoru(),
+		double maleIntensity = -1,
+		vectorf maleRate = vectorf(),
+		vectoru maleAfterLoci = vectoru(),
+		double convProb = 0,          // no conversion
+		UINT convMode = CONVERT_NumMarkers,
+		double convParam = 1.,
+		int begin = 0, int end = -1, int step = 1, vectorl at = vectorl(),
+		int rep = REP_ALL, const vectorstr & infoFields = vectorstr())
 		:
 		baseOperator("", "", DuringMating, begin, end, step, at, rep, infoFields)
 		, m_intensity(intensity), m_maleIntensity(maleIntensity),
@@ -218,7 +217,8 @@ public:
 #endif
 	}
 
-	void setupParam(const population & pop);
+
+	void initialize(const population & pop);
 
 	/** Recombine parental chromosomes of \e parent	and pass them to offspring
 	 *  \e off. The homologous chromosomes ofe parent will be recombined
@@ -247,16 +247,14 @@ public:
 		individual * dad = NULL,
 		individual * mom = NULL);
 
-	
-
 private:
 	// this function implement how to recombine
 	// parental chromosomes and set one copy of offspring chromosome
 	// bt contains the bernulli trailer
 	void recombine(
-		const individual & parent,                                                        // one of the parent
-		individual & offspring,                                                 // offspring
-		int offPloidy,                                                              // which offspring ploidy to fill
+		const individual & parent,                                                          // one of the parent
+		individual & offspring,                                                             // offspring
+		int offPloidy,                                                                      // which offspring ploidy to fill
 		BernulliTrials & bt,
 		const vectoru & recBeforeLoci,
 		bool setSex = false);
@@ -271,9 +269,9 @@ private:
 		double intensity,
 		vectorf rate,
 		vectoru afterLoci,                                                  //
-		bool sexChrom,                                                      // whether or not recombine the last chromosome
 		vectoru & recBeforeLoci,                                            // return before loci vector
-		vectorf & vecP);                                                    // return recombination rate
+		vectorf & vecP,
+		Sex sex);                                                           // return recombination rate
 
 	void copyParentalGenotype(const individual & parent,
 		individual & it, int ploidy);
@@ -305,8 +303,10 @@ private:
 	//  vector<BernulliTrials*> m_bt;
 	BernulliTrials m_bt, m_maleBt;
 
-	/// whether or not set sex (population having sex chromosome)
-	bool m_hasSexChrom;
+	// Which one is X chromosome
+	int m_chromX;
+	int m_chromY;
+	int m_mitochondrial;
 
 #ifndef OPTIMIZED
 	/// report the number of recombination events
